Revision history for Perl extension Coro.

TODO: better (earlier) error messages on broken transfer's
TODO: destroy gets only called on cancel: fix(?)

3.52
	- add count accessor to Coro::Semaphore.
        - add Coro::State::cctx_stacksize.

3.51  Sun Mar  4 14:18:04 CET 2007
	- fixed a problem when you weakened references to Coro::State's
          (patch by Yuval Kogman).

3.501 Wed Feb 28 12:44:07 CET 2007
	- rename some global symbols as macosx from hell redefines
          them without asking.

3.5 Tue Feb 13 20:22:53 CET 2007
	- do AnyEvent model detection earlier, avoiding problems
          caused by first using AnyEvent and later Coro::Event.
        - implement and document Coro::Event event objects.
        - fix a potential problem in Coro::Event causing crashes.
        - initialise PL_comppad when creating a new coroutine,
          avoids crashes on early coro destruction.

3.41 Mon Jan 22 19:19:49 CET 2007
	- readline on Coro::Handle did not support undefined $/,
          nor did it deliver partial lines on EOF or error.
        - implement malloc fallback for stack allocation because
          stupid broken idiotic OSX has a stupid broken
          idiotic fits-the-whole-os mmap "implementation" and
          my dick feels longer if Coro is portable even to
          obsolete platforms.

3.4  Fri Jan 19 21:52:54 CET 2007
	- remove t/09_timer.t, as it isn't really testing much
          but was rather flaky in practise.
        - async_pool coro would keep arguments and callback alive until
          it was reused.
        - cancellation of a coroutine could cause spurious idle calls
          in cede_notself.

3.3  Sat Jan  6 03:45:00 CET 2007
	- implement $coro->on_destroy.
        - Coro::Event blocking semantics have been changed,
          documented and - hopefully - improved.
	- fix nice adding, not subtracting, from priority.
        - fix ->prio and api_is_ready (patch by Mark Hinds).