@@ -6,6 +6,10 @@ TODO: destroy gets only called on cancel: fix(?)
 3.52
 	- add count accessor to Coro::Semaphore.
         - add Coro::State::cctx_stacksize.
+        - just for the fun of it, do not rely on implicit context,
+          which can dramatically improve performance, but people
+          using windows-process-emulation perls do not care much about
+          performance.
 
 3.51  Sun Mar  4 14:18:04 CET 2007
 	- fixed a problem when you weakened references to Coro::State's
